# march-madness-pool-analytics

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  pyproject.toml
.claude/memory/: MEMORY.md  feedback_deploy_trigger.md
.github/: CLAUDE.md  README.md
.github/workflows/: ci.yml
app/: CLAUDE.md  README.md  __init__.py  config.py  main.py  models.py  services.py
app/routers/: __init__.py  analyze.py  create_a_team.py  head_to_head.py  power_rankings.py  projections.py  results.py
app/tests/: __init__.py  test_analyze.py  test_create_a_team.py  test_head_to_head.py  test_infrastructure.py  test_main.py  test_power_rankings.py  test_projections.py  test_results.py  test_wins_evaluation.py
data/predictions/: 2024-2025-predictions.json  h2h-predictions.json  most-likely-bracket.json  predictions.json  results.json
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/logos/: download_logos.py
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: teamApi.js
frontend/src/components/: Bracket.css  Bracket.jsx  BracketRegion.css  BracketRegion.jsx  BracketSlot.css  BracketSlot.jsx  NavBar.css  NavBar.jsx  TeamCard.css  TeamCard.jsx  TeamPopup.css  TeamPopup.jsx
frontend/src/data/: bracketData.js  predictedBracketData.js
frontend/src/pages/: Analyze.css  Analyze.jsx  BracketPage.css  (+15 more)
nginx/conf.d/: app.conf
scripts/: download_logos.py  import_vectors.py
(+2 files in other folders)
